# MarketInsightPro

./: .dockerignore  .editorconfig  .env.example  .gitignore  .replit  CHANGELOG_UX_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  UX_FLOW_ANALYSIS.md  analytics_engine.py  app.py  app_old.py  data_generator.py  database.py  docker-compose.yml  machine_manager.py  portfolio_manager.py  primedoc.md  pyproject.toml  pytest.ini  replit.md  requirements.txt  scenario_engine.py  visualizations.py
.github/workflows/: ci.yml
attached_assets/: whatifspeck_1762437585705.txt
tests/: README.md  __init__.py  conftest.py  test_analytics_engine.py  test_data_generator.py
